--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>i love my country</h1>
     <div>
         <p>bangladesh is beautifull country</p>
+        <P>i want to go to cox bazar</P>
     </div>
 </body>
 </html>
