first time doing

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>i love my country</h1>
+    <h1>ShReYa</h1>
     <div>
-        <p>bangladesh is beautifull country</p>
-        <P>i want to go to bangladesh</P>
+        <P>Hi !!chosmis!!</P>
+        <P>it's for you</P>
+        <img src="IMG-20200819-WA0003.jpg">
     </div>
 </body>
 </html>
