--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ShReYa</h1>
+    <h1>bangladesh</h1>
     <div>
-        <P>Hi !!chosmis!!</P>
-        <P>it's for you</P>
-        <img src="IMG-20200819-WA0003.jpg">
+        <P>i love my country</P>
+        <P>i want to go to chittagong</P>
     </div>
 </body>
 </html>
